removed unnecessary permissions

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,9 +23,6 @@
   "content_security_policy": "script-src 'self' 'sha256-VaAnP2J3IR6odQXL8lBt9mNxNYS/U3Eh+wJ6nr5I82A=' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
   "permissions": [
     "background",
-    "storage",
-    "notifications",
-    "webRequest",
-    "unlimitedStorage"
+    "storage"
   ]
 }
