--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,9 +23,10 @@
     "scripts": ["background.js"],
     "persistent": true
   },
-  "content_security_policy": "script-src 'self' 'sha256-h4iEldfA65G5aBgxZ0eUKcuYZrLyAOAFK95LCyZd8AU=' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'sha256-ElykbpdKDzc+3xa1UoBv3/hNkWVAbgjzUlWr23RPne4=' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
   "permissions": [
     "background",
-    "storage"
+    "storage",
+    "notifications"
   ]
 }
