--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@epnsproject/frontend-sdk-staging": "^1.8.1",
+    "@epnsproject/sdk-restapi": "0.0.3",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
