update version number

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "EPNS Protocol (Alpha)",
   "description": "Receive Notifications from Web3.0.\n\nIntroducing Ethereum Push Notification Service (EPNS) - The Missing Piece of Web3.",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "index.html",
@@ -20,7 +20,9 @@
     "128": "/images/get_started128.png"
   },
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": true
   },
   "content_security_policy": "script-src 'self' 'sha256-G3Kz1I8/7XpFKsnzcqwUW6tETCcESP3q0yJbcK+IXDg=' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
@@ -30,5 +32,3 @@
     "notifications"
   ]
 }
-
-
