--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@epnsproject/frontend-sdk-staging": "^1.8.4",
-    "@epnsproject/sdk-restapi": "0.0.3",
+    "@epnsproject/sdk-restapi": "^0.1.13",
+    "@epnsproject/sdk-uiweb": "^0.1.10",
+    "@ethersproject/providers": "^5.7.1",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.23.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "ethers": "^5.7.1",
     "firebase": "^8.7.0",
     "gsap": "^3.10.3",
     "moment": "^2.29.3",
@@ -26,7 +29,8 @@
     "rimraf": "^2.7.1",
     "styled-components": "^5.3.5",
     "wallet-address-validator": "^0.2.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
